rydde tester